--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
-<ion-tab [root]="tab1Root" tabTitle="Journal" tabIcon="book"></ion-tab>
-<ion-tab [root]="tab2Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
-<ion-tab [root]="tab3Root" tabTitle="Home" tabIcon="home"></ion-tab>
-<ion-tab [root]="tab4Root" tabTitle="Agenda" tabIcon="calendar"></ion-tab>
-<ion-tab [root]="tab5Root" tabTitle="Quotes" tabIcon="quote"></ion-tab>
+    <ion-tab [root]="tab1Root" tabTitle="Notes" tabIcon="book"></ion-tab>
+    <ion-tab [root]="tab2Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
+    <ion-tab [root]="tab3Root" tabTitle="Home" tabIcon="home"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Agenda" tabIcon="calendar"></ion-tab>
+    <ion-tab [root]="tab5Root" tabTitle="Quotes" tabIcon="quote"></ion-tab>
 </ion-tabs>
