--- a/src/pages/show-quotes/show-quotes.html
+++ b/src/pages/show-quotes/show-quotes.html
@@ -7,16 +7,19 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-list *ngIf="Quotes !== null">
     <ion-item  *ngFor="let quotes of Quotes">
+
       <div class="w3-panel w3-leftbar w3-light-grey">
+          {{quotes.Day}}/{{quotes.Month}}/{{quotes.Year}}
           <p class="w3-xlarge w3-serif">
-            <p>{{quotes.Day}}/{{quotes.Month}}/{{quotes.Year}}</p>
             <i text-wrap>"{{quotes.Quote}}"</i>
           <p>{{quotes.Auteur}}</p>
-          <img src="assets/img/share.png" alt="share" id="share-button" (click)="share(quotes.Quote, quotes.Auteur)">
+          <br>
+          
         </div>
+        <img src="assets/img/share.png" alt="share" id="share-button" (click)="share(quotes.Quote, quotes.Auteur)">
       </ion-item>
   </ion-list>
 </ion-content>
