--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -31,12 +31,12 @@
       <div *ngIf="email.invalid && email.dirty"><span class="global__input-error">E-mail adres ongeldig.</span></div>
       <button ion-button block (click)="forgotpassword(recovery)" [disabled]="loginForm.invalid">
         
-      Stuur mij een wachtwoord herstel mail</button>
+      Herstel wachtwoord</button>
     
 
     </ion-card-content>
   </ion-card>
-  <button ion-button text-center (click)="navigateToPage('LoginPage')">Login</button>
+  <button ion-button block text-center (click)="navigateToPage('LoginPage')">Naar login</button>
 </form>
   </ion-content>
   
