Working profile page functionality

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,5 +8,5 @@
 
 
 <ion-content padding>
-<app-profile-form></app-profile-form>
+<app-profile-form (saveProfileResult)="saveProfileResult($event)"></app-profile-form>
 </ion-content>
