theming + notes filter

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -12,7 +12,7 @@
 
 </ion-header>
 
-<ion-content padding>
+<ion-content padding class="container">
 
 <img src="assets/imgs/boomB.png" alt="logo" class="logo">
 <app-login-form (loginStatus)="login($event)"></app-login-form>
