--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -13,8 +13,8 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content padding class="container">
+  <img src="assets/imgs/boomB.png" alt="logo" class="logo">
    <app-register-form (registerStatus)="register($event)"></app-register-form>
 
 </ion-content>
