--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
     
-        <ion-navbar color="secondary">
+        <ion-navbar>
         <ion-title>Online Academy</ion-title>
       </ion-navbar>
     
