--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -4,16 +4,16 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header >
   
-    <ion-navbar>
+    <ion-navbar color="primary">
       <ion-title>Wachtwoord Vergeten</ion-title>
     </ion-navbar>
   
   </ion-header>
   
   
-  <ion-content padding>
+  <ion-content padding class="container">
       <form #loginForm="ngForm" novalidate>
   <ion-card>
     <ion-card-content>
