--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -4,10 +4,11 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-
-<ion-header><ion-navbar>
+<ion-header>
+<ion-navbar color="primary">
 <ion-title>Explore</ion-title>
-</ion-navbar></ion-header>
+</ion-navbar>
+</ion-header>
 <ion-content >
   <ion-slides>
     <ion-slide tappable ><img src="assets/img/5W.jpg"></ion-slide>
