--- a/src/pages/profile-view/profile-view.html
+++ b/src/pages/profile-view/profile-view.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>ProfileViewPage</ion-title>
+    <ion-navbar color="primary">
+    <ion-title>Profiel</ion-title>
   </ion-navbar>
 
 </ion-header>
