--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-    <ion-navbar color="secondary">
+    <ion-navbar color="primary">
     <ion-title>Online Academy</ion-title>
   </ion-navbar>
 
