--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -1,6 +1,6 @@
 
 <ion-header>
-        <ion-navbar color="secondary">
+        <ion-navbar color="primary">
         <ion-title>Online Academy</ion-title>
       </ion-navbar>
 </ion-header>
@@ -8,8 +8,8 @@
 
 <ion-content>
     <ion-row><label>Auteur van de quote:</label></ion-row>
-    <ion-input [(ngModel)]="quote.author" type="text" placeholder="Auteur van de quote" id="auteur"></ion-input>
+    <ion-row><ion-input [(ngModel)]="quote.author" type="text" placeholder="Auteur van de quote" id="auteur"></ion-input></ion-row>
     <ion-row><label>Quote:</label></ion-row>
     <ion-textarea [(ngModel)]="quote.quote" type="text" placeholder="Uw quote" id="quote"></ion-textarea>
-    <button ion-button block (click)="addQuote(quote.author,quote.quote)">Sla quote op</button>
+    <button ion-button block clear (click)="addQuote(quote.author,quote.quote)">Opslaan</button>
 </ion-content>
