--- a/src/pages/show-quotes/show-quotes.html
+++ b/src/pages/show-quotes/show-quotes.html
@@ -1,7 +1,12 @@
 <ion-header>
 
-  <ion-navbar>
+    <ion-navbar color="primary">
     <ion-title>Online Academy</ion-title>
+    <ion-buttons end>
+        <button (click)="navigateToPage('QuotePage')" ion-button>
+            <ion-icon name="add"></ion-icon>
+        </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -23,7 +28,3 @@
       </ion-item>
   </ion-list>
 </ion-content>
-
-<ion-footer>
-  <button ion-button block (click)="navigateToPage('QuotePage')">Voeg je eigen quote toe.</button>
-</ion-footer>
