--- a/src/pages/training-courses/training-courses.html
+++ b/src/pages/training-courses/training-courses.html
@@ -1,12 +1,6 @@
-<!--
-  Generated template for the TrainingCoursesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
-  <ion-navbar>
+    <ion-navbar color="primary">
     <ion-title>TRAINING COURSES</ion-title>
   </ion-navbar>
 
