--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -9,7 +9,7 @@
 <ion-title>Explore</ion-title>
 </ion-navbar>
 </ion-header>
-<ion-content >
+<ion-content class="container">
   <ion-slides>
     <ion-slide tappable ><img src="assets/img/5W.jpg"></ion-slide>
     <ion-slide tappable ><img src="assets/img/MVT.jpg"></ion-slide>
