--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="container">
   <div class="image-container">
     <img src="assets/img/explore.jpg" (click)="navigateToPage('ExplorePage')"alt="explore">
     <div class="centered">Modules van master in business</div>
