--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -7,6 +7,6 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="container">
 <app-profile-form (saveProfileResult)="saveProfileResult($event)"></app-profile-form>
 </ion-content>
