--- a/src/pages/show-quotes/show-quotes.html
+++ b/src/pages/show-quotes/show-quotes.html
@@ -12,7 +12,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="container">
   <ion-list *ngIf="Quotes !== null">
     <ion-item  *ngFor="let quotes of Quotes">
 
