--- a/src/pages/training-courses/training-courses.html
+++ b/src/pages/training-courses/training-courses.html
@@ -7,7 +7,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="container">
   <img src="assets/img/training_courses1.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=2')">
   <img src="assets/img/training_courses2.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=3')">
   <img src="assets/img/training_courses3.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=5')">
