--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="container">
   <video autoplay loop src="assets/VideoApp.mp4"></video>
     <img src="assets/imgs/boomB.png" alt="logo" class="logo" >
   <div class="buttons">
