--- a/src/pages/edit-note/edit-note.html
+++ b/src/pages/edit-note/edit-note.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content padding class="container">
     <ion-item>
         <ion-input type="text" [(ngModel)]="note.title" placeholder="Titel">
           
