--- a/src/pages/quote/quote.html
+++ b/src/pages/quote/quote.html
@@ -6,9 +6,9 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content class="container">
     <ion-row><label>Auteur van de quote:</label></ion-row>
-    <ion-row><ion-input [(ngModel)]="quote.author" type="text" placeholder="Auteur van de quote" id="auteur"></ion-input></ion-row>
+    <ion-input [(ngModel)]="quote.author" type="text" placeholder="Auteur van de quote"></ion-input>
     <ion-row><label>Quote:</label></ion-row>
     <ion-textarea [(ngModel)]="quote.quote" type="text" placeholder="Uw quote" id="quote"></ion-textarea>
     <button ion-button block clear (click)="addQuote(quote.author,quote.quote)">Opslaan</button>
