--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
     <div clas="right"><img src="assets/img/arrow.png"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/training_courses.png" (click)="navigateToPage('TrainingCoursesPage')"alt="training courses">
+    <img src="assets/img/training_courses.png" (click)="navigateToPage('CoinsPage')"alt="training courses">
     <div class="centered">Onze realisaties</div>
   </div>
   <div class="image-container">
