--- a/src/pages/coins/coins.html
+++ b/src/pages/coins/coins.html
@@ -14,15 +14,21 @@
 
 
 <ion-content padding>
-
+  <form id="filter"></form>
+  <label>FIlter coins by name:</label>
+    <ion-searchbar type="text" placeholder="Search coins by name"></ion-searchbar>
+  <br>
     <ion-row>
         <ion-col>
           <div *ngFor="let item of coinData">
+            
             <ion-card>
             <ion-item>
-              <h2>{{item.name }}</h2>
-              <p>{{item.symbol}}</p>
-              <p>{{item.website_slug}}</p>
+              <h2>{{item.name}}</h2>
+              <p>Rank: {{item.rank}}</p>
+              <br>
+              <p>Price: ${{item.quotes.USD.price }}</p>
+              <p>Total Supply: {{item.total_supply}}</p>
             </ion-item>
             <ion-row>
               <ion-col>
