--- a/src/pages/coins/coins.html
+++ b/src/pages/coins/coins.html
@@ -16,6 +16,8 @@
 <ion-content padding>
   <form id="filter"></form>
     <ion-searchbar (ionInput)="getItems($event)" [debounce]="500" placeholder="Search coins by name"></ion-searchbar>
+    <button ion-button icon-left>
+      </button>
   <br>
     <ion-row>
         <ion-col>
