added new category pages

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,16 +15,24 @@
 
 <ion-content class="container">
   <div class="image-container">
-    <img src="assets/img/explore.jpg" (click)="navigateToPage('ExplorePage')"alt="explore">
-    <div class="centered">What is GPU mining ?</div>
+    <img src="assets/img/gpuMining.png" (click)="navigateToPage('ExplorePage')"alt="explore">
+    <div class="centered"></div>
     <div clas="right"><img src="assets/img/arrow.png"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/training_courses.png" (click)="navigateToPage('CoinsPage')"alt="training courses">
-    <div class="centered">Onze realisaties</div>
+    <img src="assets/img/buildRigCol.png" (click)="navigateToPage('CoinsPage')"alt="training courses">
+    <div class="centered"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/immersion.jpg" (click)="navigateToPage('ImmersionPage')" alt="immersion">
-    <div class="centered">Onze diensten</div>
+    <img src="assets/img/coinPrices.png" (click)="navigateToPage('ImmersionPage')" alt="immersion">
+    <div class="centered"></div>
+  </div>
+  <div class="image-container">
+    <img src="assets/img/shop.png" (click)="navigateToPage('ImmersionPage')" alt="shop">
+    <div class="centered"></div>
+  </div>
+  <div class="image-container">
+    <img src="assets/img/community.png" (click)="navigateToPage('ImmersionPage')" alt="community">
+    <div class="centered"></div>
   </div>
 </ion-content>
