added new page for the asp.core api

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -7,7 +7,7 @@
 <ion-header>
 
     <ion-navbar color="primary">
-    <ion-title>Kaizen Projects</ion-title>
+    <ion-title>Buriedone</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,24 +15,24 @@
 
 <ion-content class="container">
   <div class="image-container">
-    <img src="assets/img/gpuMining.png" (click)="navigateToPage('ExplorePage')"alt="explore">
+    <img src="assets/imgs/gpuMining.png" (click)="navigateToPage('')"alt="gpuMining">
     <div class="centered"></div>
     <div clas="right"><img src="assets/img/arrow.png"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/buildRigCol.png" (click)="navigateToPage('CoinsPage')"alt="training courses">
+    <img src="assets/imgs/buildRigCol.png" (click)="navigateToPage('')"alt="buildRigCol">
     <div class="centered"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/coinPrices.png" (click)="navigateToPage('ImmersionPage')" alt="immersion">
+    <img src="assets/imgs/coinPrices.png" (click)="navigateToPage('CoinsPage')" alt="coinPrices">
     <div class="centered"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/shop.png" (click)="navigateToPage('ImmersionPage')" alt="shop">
+    <img src="assets/imgs/shop.png" (click)="navigateToPage('')" alt="shop">
     <div class="centered"></div>
   </div>
   <div class="image-container">
-    <img src="assets/img/community.png" (click)="navigateToPage('ImmersionPage')" alt="community">
+    <img src="assets/imgs/community.png" (click)="navigateToPage('ImmersionPage')" alt="community">
     <div class="centered"></div>
   </div>
 </ion-content>
