--- a/src/pages/home2/home2.html
+++ b/src/pages/home2/home2.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar color="primary">
         <ion-title>
-            Mijn kaizen Journal
+            My cryto journal
         </ion-title>
         <ion-buttons end>
             <button (click)="goToAdd()"ion-button>
