--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,5 +3,5 @@
     <ion-tab [root]="tab1Root" tabTitle="Notities" tabIcon="book"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Profiel" tabIcon="contact"></ion-tab>
     <ion-tab [root]="tab4Root" tabTitle="Agenda" tabIcon="calendar"></ion-tab>
-    <ion-tab [root]="tab5Root" tabTitle="Quotes" tabIcon="quote"></ion-tab>
+    <ion-tab [root]="tab5Root" tabTitle="Todo" tabIcon="Todo"></ion-tab>
 </ion-tabs>
