final commit! added community page with extern random user api's

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -32,7 +32,7 @@
     <div class="centered"></div>
   </div>
   <div class="image-container">
-    <img src="assets/imgs/community.png" (click)="navigateToPage('ImmersionPage')" alt="community">
+    <img src="assets/imgs/community.png" (click)="navigateToPage('CommunityPage')" alt="community">
     <div class="centered"></div>
   </div>
 </ion-content>
