--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -14,7 +14,7 @@
   </button>
   <br>
   <button ion-button outline  text-capitalize id="register"(click)="navigateToPage('RegisterPage')">
-    Registreer nu
+    Sign up now!
   </button>
 </div>
 
