--- a/src/pages/buriedone-shop/buriedone-shop.html
+++ b/src/pages/buriedone-shop/buriedone-shop.html
@@ -8,10 +8,5 @@
 
 
 <ion-content class="container">
-  <img src="assets/img/training_courses1.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=2')">
-  <img src="assets/img/training_courses2.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=3')">
-  <img src="assets/img/training_courses3.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=5')">
-  <img src="assets/img/training_courses4.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=1')">
-  <img src="assets/img/training_courses5.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=4')">
-  <img src="assets/img/training_courses6.jpg" alt="" (click)="openWebpage('https://app.carlvandevelde.be/mijn-academie/master-in-business?popup=6')">
+  <p>Under construction :s</p>
 </ion-content>
