--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,6 +2,6 @@
     <ion-tab [root]="tab3Root" tabTitle="Home" tabIcon="home"></ion-tab>
     <ion-tab [root]="tab1Root" tabTitle="Notities" tabIcon="book"></ion-tab>
     <ion-tab [root]="tab2Root" tabTitle="Profiel" tabIcon="contact"></ion-tab>
-    <ion-tab [root]="tab4Root" tabTitle="Community" tabIcon="calendar"></ion-tab>
+    <ion-tab [root]="tab4Root" tabTitle="Community" tabIcon="body"></ion-tab>
     <ion-tab [root]="tab5Root" tabTitle="Todo" tabIcon="create"></ion-tab>
 </ion-tabs>
